服务器健壮性增强
添加消息长度限制(1000字符)防止恶意长消息
改进IP获取逻辑，支持IPv6地址
增加WebSocket心跳检测，自动清理僵尸连接
添加消息长度验证防止内存溢出
用户体验优化

添加顶部连接状态指示器（已连接/断开/错误）
实现自动重连机制（指数退避策略）
优化复制通知显示位置和动画
添加复制失败时的用户反馈
代码质量提升

提取复制功能为独立copyToClipboard函数
封装通知显示为showNotification函数
添加详细注释说明关键逻辑
优化DOM操作性能（使用文档片段）

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
         <header class="chat-header">
             <h1>局域网聊天室</h1>
             <div class="header-controls">
+                <div id="connectionStatus" class="connection-status"></div>
                 <div class="user-info">
                     <span id="username">未登录</span>
                 </div>
