--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
@@ -26,7 +25,7 @@
         </header>
         <div class="chat-messages" id="messages"></div>
         <div class="chat-input">
-            <input type="text" id="messageInput" placeholder="输入消息...">
+            <textarea id="messageInput" placeholder="输入消息..."></textarea>
             <button id="sendButton">发送</button>
         </div>
     </div>
